# curvine-kube

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/builder/: mod.rs
src/builder/common/: mod.rs
src/cli/: commands.rs  k8s.rs  mod.rs
src/cli/display/: colors.rs  icons.rs  mod.rs  table.rs
src/domain/: mod.rs
src/domain/cluster/: descriptor.rs  mod.rs  validator.rs
src/domain/config/: curvine.rs  dynamic.rs  kubernetes.rs  mod.rs
src/infrastructure/: constants.rs  mod.rs
src/infrastructure/kubernetes/: client.rs  mod.rs
src/infrastructure/kubernetes/resources/: configmap.rs  headless_service.rs  mod.rs  service.rs
src/infrastructure/kubernetes/resources/pod/: merger.rs  mod.rs  template.rs  template_utils.rs
src/infrastructure/kubernetes/resources/pod/builders/: env.rs  lifecycle.rs  mod.rs  traits.rs
src/infrastructure/kubernetes/resources/statefulset/: master.rs  mod.rs  worker.rs
src/shared/: error.rs  mod.rs
tests/: PRODUCTION_TEST_PLAN.md  TEST_COVERAGE_MATRIX.md  e2e_test.sh  integration_test.rs  new_features_test.rs  quick_e2e_test.sh  test_boundary_comprehensive.sh  test_debug_deploy.sh  test_update_pod_template.sh  test_update_pod_template_simple.sh
tests/conf/: curvine-cluster-k8s-example.toml  test-cluster.toml
tests/pod-templates/: README.md  master-correct-mountpath.yaml  master-hostpath.yaml  master-invalid-mountpath.yaml  master-tolerations.yaml  master-wrong-container-name.yaml  worker-correct-mountpath.yaml  worker-hostpath.yaml  worker-invalid-mountpath.yaml  worker-tolerations.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
